# src/routers/user.router.ts
@@ -29,6 +29,11 @@ router.post(
   fileMiddleware.isFileValid(),
   userController.uploadAvatar,
 );
+router.delete(
+  "/me/avatar",
+  authMiddleware.checkAccessToken,
+  userController.deleteAvatar,
+);
 router.get(
   "/:userId",
   commonMiddleware.isIdValid("userId"),
